src/components/infopopups/common/infopopup.css
.info-modal-title {
    background-color: var(--header-background);
    color: white;
    margin: auto;
    padding: 20px;
    width: 55%;
    font-size: 2em;
    min-width: 800px;
}

.info-modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 22px 20px 40px 20px;
    border: 1px solid #888;
    width: 55%;
    min-width: 800px;
    font-size: 16px;
}

.info-modal-primary-heading {
    font-weight: bolder;
    padding-bottom: 20px;
    padding-left: 16px;
    font-size: 2rem;
}

.info-modal-section-heading {
    font-weight: bolder;
    padding: 15px 0 15px 33px;
}

.info-modal-section {
    padding-bottom: 15px;
    margin-top: -5px;
}
.info-modal-details {
    padding-left: 18px;
    padding-right: 11px;
}

.bullet {
    width: 2px;
    border-radius: 50%;
    background-color: #4f4f4f;
    border-width: thick;
    padding: 3px;
    margin-top: 8px;
}

.bullet-div {
    width: 5px;
    margin-left: 20px;
}

.bullet-list-row {
    margin: 8px;
    font-weight: normal;
}

.bullet-row-content{
    display: flex;
}
.bullet-row-description {
    width:75%;
}
.bullet-row-badges-container {
    width: 25%;
}

.icon-container-box {
    padding-top:1px;
}

.info-modal-icon-container {
    position: relative;
    height: 60px;
    width: 60px;
    border-radius: 50%;
    border-width: 20px;
    background-color: #49a25a;
}

.info-modal-icon {
    height: 60px;
    width: 60px;
    position: absolute;
    padding: 12px;
}

.info-modal-divider {
    border-bottom: 1px solid lightgrey;
    margin-left: 95px;
    margin-right: 30px;
    padding-bottom: 10px;
}

.info-modal-ol {
    padding: 25px 0 10px 0;
}

.deadline {
    display: flex;
    flex-flow: row;
    align-content: space-evenly;
    background-color: #ffe9b0;
    padding: 15px;
    border-radius: 10px;
    margin-left: 2px;
}

.deadline-quantity {
    color: red;
    padding: 0 5px;
}

.deadline-alert {
    font-size: 2.2rem;
    padding-right: 10px;
}

.deadline-statement {
    padding: 0;
}

.vertical-line {
    width: 7px;
    margin: 2px 0 -9px 27px;
    background: #f2f2f2;
    height: 100%;
}

.help-contacts {
    display: flex;
    justify-content: space-between;
    text-align: left;
}

.content-hidden {
    display: none;
}

.content-showing {
    display: block;
}

.toggle-expansion-button {
    font-size: xx-large;
    font-weight: bolder;
    color: grey;
    text-align: right;
    cursor: pointer;
    padding-right: 30px;
}

.row-badge {
    border-radius: 7px;
    border: 1px solid var(--header-background);
    color: var(--header-background);
    font-weight: bold;
    padding: 2px 3px 0 3px;
    text-align: center;
}

.evenly-spaced {
    display: flex;
    justify-content: space-between;
}

.help-title {
    color: red;
}

.info-paragraph {
    padding-bottom: 20px;
}

